# uvicarm2024

./: CMakeLists.txt  README.md  package.xml  software.md
launch/: display.launch  gazebo.launch
meshes/: base_link.STL  end_effector.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
urdf/: uvicarm.csv  uvicarm2024.urdf
