<package format="2">
  <name>uvicarm2024</name>
  <version>1.0.0</version>
  <description>
    <p>uvicarm2024</p>
    <p>This package contains configuration data, 3D models and launch files
for ASY, ROBOTIC ARM 2024, URDF robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_setup_assistant</depend>
  <depend>moveit_simple_controller_manager</depend>	  
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
